# eora_test

./: .gitignore  Dockerfile  Makefile  README.md  bot.py  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: checks.yml
bot_api/: database.py  models.py  schemas.py  services.py
catbreadbot/: bot.py
db/: sample.db
services/caddy/: Caddyfile
tests/: conftest.py  test_bot.py  test_bot_api.py
