[tool.poetry]
name = "eora-test"
version = "0.1.0"
description = ""
authors = ["Anton Semenov <s.anton@live.ru>"]
readme = "README.md"
packages = [{include = "eora_test"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
